--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
     }
   </style>
 </head>
-<body>
+<body style="background-color: #9f0000;">
 <img src="GOR Rigby Serious.jpeg" alt="Gallon of Red holding a gallon of red." class="center">
 <header id="title-block-header">
 <h1 class="title">Gallon of Red</h1>
