--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <title>Gallon of Red</title>
   <style>
     html {
-      color: #1a1a1a;
-      background-color: #fdfdfd;
+      color: #eeeeee;
+      background-color: #5b161c;
     }
     body {
       margin: 0 auto;
@@ -53,10 +53,10 @@
       margin: 1em 0;
     }
     a {
-      color: #1a1a1a;
+      color: #eeeeee;
     }
     a:visited {
-      color: #1a1a1a;
+      color: #eeeeee;
     }
     img {
       max-width: 100%;
@@ -188,7 +188,7 @@
     }
   </style>
 </head>
-<body style="background-color: #9f0000;">
+<body>
 <img src="GOR Rigby Serious.jpeg" alt="Gallon of Red holding a gallon of red." class="center">
 <header id="title-block-header">
 <h1 class="title">Gallon of Red</h1>
