--- a/index.html
+++ b/index.html
@@ -171,13 +171,13 @@
       display: block;
       margin-left: auto;
       margin-right: auto;
-      width: 75%;
+      width: 100%;
     }
     /* Three image containers (use 25% for four, and 50% for two, etc) */
     .column {
       float: left;
-      width: 48%;
-      padding: 5px;
+      width: 50%;
+      padding: 0px;
     }
 
     /* Clear floats after image containers */
@@ -189,7 +189,7 @@
   </style>
 </head>
 <body>
-<img src="GOR Rigby Serious.jpeg" alt="Gallon of Red holding a gallon of red." class="center">
+<img src="images\GOR Rigby Serious.jpeg" alt="Gallon of Red holding a gallon of red." class="center">
 <header id="title-block-header">
 <h1 class="title">Gallon of Red</h1>
 <p class="author">Madison, WI Based Alternative Rock Band</p>
@@ -220,11 +220,12 @@ No One Killed Jessica<br />
 </ol>
 <div class="row">
   <div class="column">
-    <img src="GOR Rigby.jpeg" alt="A GOR Show" style="width:100%">
+    <img src="images\GOR Hands.jpeg" alt="GOR showing off their beautiful friendship" style="width:100%">
   </div>
   <div class="column">
-    <img src="GOR Rigby 2.jpeg" alt="Another GOR Show" style="width:100%">
+    <img src="images\GOR Rigby.jpeg" alt="A GOR Show" style="width:100%">
   </div>
 </div>
+<img src="images\GOR Rigby 2.jpeg" alt="Another GOR Show" class="center">
 </body>
 </html>
