--- a/index.html
+++ b/index.html
@@ -196,8 +196,8 @@
 </header>
 <h1 id="upcoming-shows">Upcoming Shows</h1>
 <ol>
-<li><p>04/25: Madison, WI @ TBD with Prairie Smoke and Bleeding
-Lizard</p></li>
+<li><p> TBD
+</p></li>
 </ol>
 <h1 id="links">Links</h1>
 <p>(DM for booking)</p>
